Fix crash with the QQuickRenderControl and deleteLater

From 238cc098d785b4fe76fbc8422b340d98ff8c1a1b which removes this same
line from the software renderer.

>I can't see a good reason for the existence of the sendPostedEvents()
>call there. It is not present in the other render loops and according
to
>git blame it stems from the very early first implementation of the
>software renderer where surely copy & paste from other render loop code
>was involved back then.

Task-number: QTBUG-68997
Change-Id: I40aaeb92f431d474b7b1affb85d0ea5f8b2a46ef
Reviewed-by: Simon Hausmann <simon.hausmann@qt.io>